<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Operator Plugin APK</string>
    <string name="sending_mail_title">Sending email...</string>
    <string name="sent_success_title">Sent successfully.</string>
    <plurals name="sent_success_text">
        <item quantity="one"><xliff:g id="sent_emails" example="1">%d</xliff:g> mail has been sent successfully.</item>
        <item quantity="other"><xliff:g id="sent_emails" example="5">%d</xliff:g> mails have been sent successfully.</item>
    </plurals>
    <string name="sent_failed_title">Sent email failed</string>
    <plurals name="sent_failed_text">
        <item quantity="one"><xliff:g id="unsent_emails">%d</xliff:g> unsent mail.</item>
        <item quantity="other"><xliff:g id="unsent_emails">%d</xliff:g> unsent mails.</item>
    </plurals>
    <string name="CT_provider_email_account_signature">\n\nFrom 189 mail</string>
    <string name="CT_provider_email_account_name_description">189mail</string>
    <string name="email_choose_provider_189">189Mail</string>
    <string name="email_choose_provider_sina">Sina</string>
    <string name="email_choose_provider_others">Others</string>
    <string name="homepage_base_site_navigation" translatable="false">
        content://com.android.browser.site_navigation/websites</string>
    <string-array name="bookmarks_for_op09" translatable="false">
        <item>新浪微博</item>
        <item translatable="false">http://weibo.com/</item>

        <item>大众点评</item>
        <item translatable="false">http://www.dianping.com/</item>

        <item>同花顺</item>
        <item translatable="false">http://www.10jqka.com.cn/</item>

        <item>有道词典</item>
        <item translatable="false">http://dict.youdao.com/</item>

        <item>我查查</item>
        <item translatable="false">http://www.wochacha.com/</item>
    </string-array>
    <string-array name="predefined_websites_op09" translatable="false">
        <item>新浪微博</item>
        <item>http://weibo.com/</item>
        <item>op09_thumb_weibo</item>

        <item>大众点评</item>
        <item>http://www.dianping.com/</item>
        <item>op09_thumb_dianping</item>

        <item>同花顺</item>
        <item>http://www.10jqka.com.cn/</item>
        <item>op09_thumb_jqka</item>

        <item>有道词典</item>
        <item>http://dict.youdao.com/</item>
        <item>op09_thumb_youdao</item>

        <item>我查查</item>
        <item>http://www.wochacha.com/</item>
        <item>op09_thumb_chacha</item>
    </string-array>
    <string name="add_new_bookmark">Add bookmark</string>
    <string name="new_folder">New folder</string>
    <string name="low_storage_dialog_title_on_external">Attention</string>
    <string name="low_storage_dialog_msg_on_external">The phone storage does not have enough space. Can not download now.</string>
    <string name="low_storage_dialog_title_on_extra">Attention</string>
    <string name="low_storage_dialog_msg_on_extra">The extra storage does not have enough space. Can not download now.</string>
    <string name="none_audio_file">Not supported file format.</string>
    <string name="select_folder_empty">Selected folder has no music.</string>
    <string name="add_folder_to_play">Play folder</string>
    <string name="add_folder_as_playlist">Add folder as playlist</string>
    <string name="add_song_to_play">Play file</string>
    <string name="international_roaming_label">Roaming Settings</string>
    <string name="network_select_title">Network selection and settings</string>
    <string name="prl_title">CDMA PRL update</string>
    <string name="roaming_hotline_title">Free service</string>
    <string name="summary_free_service">+86 18918910000</string>
    <string name="reset_to_default_title">Reset to default</string>
    <string name="time_zone_recommend_title">Time zone recommendation</string>
    <string name="time_settings_title">Time display mode</string>
    <string name="time_zone_recommend_notify_summary">Touch to view the recommended time zone</string>
    <string name="notes_title">Description:</string>
    <string name="notes_summary">This menu applicables for China Telecom user\'s card, if you have any questions, please contact China Telecom customer service.</string>
    <string name="main_sim_title">Set as main card</string>
    <string name="sim_selection_title">UIM/SIM selection</string>
    <string name="general_settings_title">General settings</string>
    <string name="data_roaming_title">Enable data roaming</string>
    <string name="prefer_network_setting">Prefer network</string>
    <string name="networks">Operator selection</string>
    <string name="mms_roaming_title">Auto receive MMS when roaming</string>
    <string name="mms_roaming_auto_receive">Auto receive MMS</string>
    <string name="mdialog_message">Please note, allowing the mobile data network roaming may produce high roaming charges</string>
    <string name="select_automatically">Choose automatically</string>
    <string name="manual_select_title">Select manually</string>
    <string name="manual_select_dialog_msg">Select network manually by tap \"OK\", We will no longer automatically for you to choose other carriers if manually select and register your selected network operators .When you lose network service you need manually select and register again. We recommend that you use the "automatic network selection mode" Are you sure want to enter the manual network selection mode?</string>
    <string name="prefer_network">Prefer network:</string>
    <string name="global_mode">Global mode</string>
    <string name="gsm_only">GSM/UMTS only</string>
    <string name="cdma_only">CDMA only</string>
    <string name="prl_sending">PRL update request has been sent, please wait...</string>
    <string name="reset_content">The international menus will be reset to default, are you sure?</string>
    <string name="time_display_content">Set Calling, Sms, and Calendar\'s default time</string>
    <string name="beijing_time">Beijing time</string>
    <string name="local_time">Local time</string>
    <string name="time_zone_title">Time zone</string>
    <string name="time_zone_hint">Looking for citys</string>
    <string name="reset_success">Reset to default successfully!</string>
    <string name="gemini_sim_mode_progress_activating_message">Activating\u2026</string>
    <string name="gemini_sim_mode_progress_deactivating_message">Deactivating\u2026</string>
    <string name="main_sim">Main Card</string>
    <string name="data_conn_msg">Please turn off data connection and then set main card.</string>
    <string name="manual_network_selection_title">Manual network selection</string>
    <string name="manual_network_selection_title_with_sim"><xliff:g id="sim_slot">%1$s</xliff:g> manual network selection</string>
    <string name="enable_sim_radio">Enable</string>
    <string name="enable_data_roaming">International data roaming</string>
    <string name="ir_slot1_notes_summary">This UIM/SIM card\'s mobile service is prefered</string>
    <string name="register_automatically">Automatic registration\u2026</string>
    <string name="not_allowed">Your SIM card doesn\'t allow a connection to this network.</string>
    <string name="connect_later">Can\'t connect to this network right now. Try again later.</string>
    <string name="registration_done">Registered on network.</string>
    <string name="cdma_network_selection_title">CDMA Network Selection</string>
    <string name="gsm_network_selection_title">GSM Network Selection</string>
    <string name="current_network_info_title">Current Network Info</string>
    <string name="switch_network_manually">Switch to next network manually</string>
    <string name="status_current_sid">Current SID</string>
    <string name="status_current_nid">Current NID</string>
    <string name="status_current_sidnid">SID、NID</string>
    <string name="status_current_cellid">CELL ID</string>
    <string name="status_ct_prl_version" translatable="false">PRL Version </string>
    <string name="status_slot1_cdma_pnl_version" translatable="false">GSM(WCDMA) preferred network list version</string>
    <string name="status_slot1_gsm_pnl_version" translatable="false">Preferred network list version</string>
    <string name="status_ct_unknown" translatable="false">Unknown</string>
    <string name="status_ct_network_type">Network Type</string>
    <string name="ct_sms_center" translatable="false">SMS Center Number</string>
    <string name="status_current_operators" translatable="false">Current Operators</string>
    <string name="current_operators_mccmnc" translatable="false">MCC、MNC</string>
    <string name="status_signal_strength">Signal strength</string>
    <string name="evdo_signal_strength_info">Evdo</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="device_info_not_available">Not available</string>
    <string name="device_info_default">Unknown</string>
    <string name="manual_network_selection">Manual network selection</string>
    <string name="manual_network_cdma_searching">Searching CDMA network......</string>
    <string name="manual_network_cdma_switch">Switch to next network manually</string>
    <string name="manual_network_cdma_description">Notes: 
        \nCDMA system uses automatic network selection, and doesn\'t need any manual interference. But if current 
        network cannot work, you can try \"Switch to next network manually\" button.</string>
    <string name="manual_network_gsm_available_network">Available networks</string>
    <string name="manual_network_notes_title">Notes:</string>
    <string name="manual_network_notes_summary">Take effect only for current operation.</string>
    <string name="manual_network_register_hint_ok">You have successfully connected to \"<xliff:g id="network_current">%s</xliff:g>\" network, if the network is not good, system will connect to other roaming network automatically。</string>
    <string name="manual_network_register_hint_fail_null">The network is not available, system will connect to other roaming network automatically。</string>
    <string name="manual_network_register_hint_fail">The network \"<xliff:g id="network_failed">%s</xliff:g>\" is not available, system will connect to other roaming network automatically。</string>
    <string name="manual_network_switching_phone">Please wait...</string>
    <string name="manual_network_switch_phone_fail">Switch network mode failed, please try again later.</string>
    <string name="manual_network_get_cdmaphone_fail">Switch network failed, please try again later.</string>
    <string name="manual_network_switch_cdma_fail_data_connect">Please turn off the data connection before switching to another network manually.</string>
    <string name="network_forbidden">forbidden</string>
    <string name="network_query_error">Error while searching for networks.</string>
    <string name="register_on_network">Registering on <xliff:g id="network">%s</xliff:g>\u2026</string>
    <string name="network_setting_all_forbidden_dialog">No available networks. Please try to switch 3G service, or click a forbidden network to register manually.</string>
    <string name="load_networks_progress">Searching for GSM network\u2026</string>
    <string name="data_connection_summary_title" translatable="false">Mobile data</string>
    <string name="data_connection_sim_slot_1" translatable="false">Use UIM 1 mobile data</string>
    <string name="product_model">Model number</string>
    <string name="hardware_version">Hardware version</string>
    <string name="software_version">Software version</string>
    <string name="prl_version">PRL Version</string>
    <string name="current_sid">SID</string>
    <string name="current_nid">NID</string>
    <string name="current_meid">MEID</string>
    <string name="current_uim_id">UIM ID</string>
    <string name="unknown">unkonwn</string>
</resources>